# Feednix

./: .editorconfig  .gitignore  .travis.yml  AUTHORS  ChangeLog  README.md  autogen.sh  config.json  configure.ac
.github/workflows/: c-cpp.yml  codeql-analysis.yml
src/: CursesProvider.cpp  CursesProvider.h  FeedlyProvider.cpp  FeedlyProvider.h  Makefile.am  a.out  main.cpp
